--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "autoload": {
         "psr-4": {
             "Application\\": "src/Application",
-            "Meetup\\": "src/Meetup"
+            "Meetup\\": "src/Meetup",
+            "User\\": "src/User"
         }
     },
     "require-dev": {
